--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jsdoc-type-safety",
   "version": "0.1.0",
   "private": true,
+  "description": "Using jsdocs with typescript to type check javascript.",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,6 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "type-check": "tsc",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
