--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "snowpack dev --config snowpack.config.js",
+    "start:cra": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint src",
@@ -40,9 +41,11 @@
     ]
   },
   "devDependencies": {
+    "@snowpack/app-scripts-react": "^1.12.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "husky": "^4.3.0",
+    "snowpack": "^2.18.4",
     "typescript": "^4.1.3"
   }
 }
